--- a/.github/workflows/testclone.yml
+++ b/.github/workflows/testclone.yml
@@ -9,6 +9,6 @@ jobs:
       - name: Checkout SHiELD_build
         uses: actions/checkout@v3
         with:
-          submodules: 'true'
+          submodules: 'recursive'
       - name: check things
         run: ls -a
