--- a/.github/workflows/testclone.yml
+++ b/.github/workflows/testclone.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - name: Checkout SHiELD_build
         uses: actions/checkout@v3
-        with:
-          submodules: 'recursive'
       - name: check things
-        run: ls -a
+        run: |
+         ls -a
+         git submodule --init --recursive
