--- a/.github/workflows/testclone.yml
+++ b/.github/workflows/testclone.yml
@@ -4,8 +4,9 @@ jobs:
   Build_SOLO:
     runs-on: ubuntu-latest
     container:
-      image: noaagfdl/ubuntu_libfms_gnu
+      image: noaagfdl/hpc-me.ubuntu-minimal
     steps:
-      - name: check things
-        run: |
-         ls /usr/bin/git/
+      - name: checkout code
+        uses: actions/checkout@v3
+        with:
+          submodules: 'recursive'
